--- a/app/templates/sightings.hbs
+++ b/app/templates/sightings.hbs
@@ -6,14 +6,16 @@
     <th>Description</th>
     <th>Height (cm)</th>
     <th>Weight (kg)</th>
+    <th>BMI</th>
   </tr>
-  {{#each sightings}}
+  {{#each model as |sighting|}}
     <tr>
-        <td>{{format-date seenAt}}</td>
-        <td>{{location}}</td>
-        <td>{{description}}</td>
-        <td>{{height}}</td>
-        <td>{{weight}}</td>
+        <td>{{format-date sighting.seenAt}}</td>
+        <td>{{sighting.location}}</td>
+        <td>{{sighting.description}}</td>
+        <td>{{sighting.height}}</td>
+        <td>{{sighting.weight}}</td>
+        <td>{{sighting.bmi}}</td>
       </tr>
   {{/each}}
 </table>
